# OEP_ios_c_api

./: .gitignore  .gitmodules  BNBObjCHeaders.h  CMakeLists.txt  README.md  converter.h
bnb_sdk_c_api/: CMakeLists.txt
cmake/: utils.cmake
libraries/utils/ogl_utils/: CMakeLists.txt
libraries/utils/ogl_utils/include/: opengl.hpp
libraries/utils/ogl_utils/src/: opengl.cpp  program.cpp
oep_framework/: CMakeLists.txt
oep_framework/oep/: BNBOffscreenEffectPlayer.h  BNBOffscreenEffectPlayer.mm  converter.m  effect_player.cpp  effect_player.hpp
offscreen_render_target/: CMakeLists.txt
offscreen_render_target/include/: offscreen_render_target.h
offscreen_render_target/src/: offscreen_render_target.mm  utils.mm
resources/: Info.plist  Main.storyboard
resources/bnb-resources/bnb_js/: legacy.js
resources/bnb-resources/bnb_shaders/bnb/: decode_int1010102.glsl  lut.glsl
resources/bnb-resources/bnb_shaders/bnb/lib/: camera.frag  gltf.frag  gltf.vert  morph_apply.frag  morph_apply.vert  morph_blur.frag  morph_blur.vert  retouch.vert  vbg.vert
resources/effects/blur_bg/: config.js  config.json
src/: AppDelegate.swift  ViewController.swift
